objects/signaturit__SignatureRequestFile__c.object
<CustomObject>
    <description>File to be signed in a signature request</description>
    <fields>
        <fullName>signaturit__FileId__c</fullName>
        <description>id of the File or Attachment grabbed from Salesforce</description>
        <inlineHelpText>id of the File or Attachment grabbed from Salesforce</inlineHelpText>
        <label>File Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>signaturit__FileName__c</fullName>
        <formula>HYPERLINK(
  &quot;/&quot; &amp; Id, 
  signaturit__LongName__c,
  &quot;_self&quot;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>File Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>signaturit__LongName__c</fullName>
        <description>Not truncated name</description>
        <inlineHelpText>Not truncated name</inlineHelpText>
        <label>Long name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>signaturit__NumberCancelDocuments__c</fullName>
        <description>Number of cancel signatures</description>
        <inlineHelpText>Number of cancel signatures</inlineHelpText>
        <label>Number Cancel Signatures</label>
        <summarizedField>signaturit__SignatureSignerFile__c.signaturit__CancelCount__c</summarizedField>
        <summaryForeignKey>signaturit__SignatureSignerFile__c.signaturit__SignatureRequestFile__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>signaturit__NumberCompletedDocuments__c</fullName>
        <description>Number of completed signatures</description>
        <inlineHelpText>Number of completed signatures</inlineHelpText>
        <label>Number Completed Signatures</label>
        <summarizedField>signaturit__SignatureSignerFile__c.signaturit__CompletedCount__c</summarizedField>
        <summaryForeignKey>signaturit__SignatureSignerFile__c.signaturit__SignatureRequestFile__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>signaturit__NumberDocuments__c</fullName>
        <description>Number of signatures</description>
        <inlineHelpText>Number of signatures</inlineHelpText>
        <label>Number Signatures</label>
        <summaryForeignKey>signaturit__SignatureSignerFile__c.signaturit__SignatureRequestFile__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>signaturit__OrderIndex__c</fullName>
        <description>The order in which the document was selected in the wizard</description>
        <inlineHelpText>The order in which the document was selected in the wizard</inlineHelpText>
        <label>Order Index</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>signaturit__Origin__c</fullName>
        <description>Origin of the file to be signed</description>
        <inlineHelpText>Origin of the file to be signed</inlineHelpText>
        <label>Origin</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ExistingSalesforce</fullName>
                </value>
                <value>
                    <fullName>Upload</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>signaturit__Progress__c</fullName>
        <formula>IF( signaturit__NumberCompletedDocuments__c == signaturit__NumberDocuments__c , $Label.signaturit__SIG_StatusCompleted, IF( signaturit__NumberCancelDocuments__c &gt;= 1 , $Label.signaturit__SIG_StatusCanceled, IF( CONTAINS(signaturit__SignatureRequest__r.signaturit__Progress__c , $Label.signaturit__SIG_StatusCanceled), $Label.signaturit__SIG_StatusCanceled, $Label.signaturit__SIG_StatusInProgress)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Progress</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>signaturit__SignatureRequest__c</fullName>
        <description>Parent Signature request</description>
        <inlineHelpText>Parent Signature request</inlineHelpText>
        <label>Signature Request</label>
        <referenceTo>signaturit__SignatureRequest__c</referenceTo>
        <relationshipLabel>Signature Request Files</relationshipLabel>
        <relationshipName>SignatureRequestFile</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>signaturit__TemplateName__c</fullName>
        <description>When using a Signaturit template, the name of the template</description>
        <inlineHelpText>When using a Signaturit template, the name of the template</inlineHelpText>
        <label>Template Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>signaturit__Type__c</fullName>
        <description>File type of the file to be signed</description>
        <inlineHelpText>File type of the file to be signed</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>pdf</fullName>
                </value>
                <value>
                    <fullName>word</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Documento de Solicitud de Firma</label>
    <nameField>
        <label>Signature Request File Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Documentos de Solicitud de Firma</pluralLabel>
    <recordTypes>
        <fullName>signaturit__File</fullName>
        <active>true</active>
        <description>Signing file comes from an upload or an existing Salesforce File</description>
        <label>File</label>
    </recordTypes>
    <recordTypes>
        <fullName>signaturit__Template</fullName>
        <active>true</active>
        <description>File singning request is from a Signaturit template</description>
        <label>Template</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>